--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,17 @@
 {
-    "name": "automattic/underscores",
+    "name": "ragtag/freefrom",
     "type": "wordpress-theme",
-    "description": "Hi. I'm a starter theme called _s, or underscores, if you like. I'm a theme meant for hacking so don't use me as a Parent Theme. Instead try turning me into the next, most awesome, WordPress theme out there. That's what I'm here for.",
+    "description": "Theme built by RagTag for FreeFrom",
     "keywords": [
         "WordPress",
         "Themes"
     ],
-    "homepage": "https://github.com/Automattic/_s",
+    "homepage": "https://freefrom.org",
     "license": "GPL-2.0-or-later",
     "authors": [
         {
             "name": "Contributors",
-            "homepage": "https://github.com/Automattic/_s/graphs/contributors"
+            "homepage": "https://ragtag.org"
         }
     ],
     "require": {
