--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@wordpress/scripts": "^12.1.0",
+    "@wordpress/stylelint-config": "^19.0.2",
     "dir-archiver": "^1.1.1",
     "node-sass": "^4.14.1",
     "rtlcss": "^2.5.0"
@@ -34,6 +35,9 @@
     },
     "plugins": [],
     "map": false
+  },
+  "stylelint": {
+    "extends": "@wordpress/stylelint-config/scss"
   },
   "scripts": {
     "watch": "node-sass sass/ -o ./ --source-map true --output-style expanded --indent-type tab --indent-width 1 -w",
