--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - checkout
       - node/install:
-          lts: true
+          lts: true # only lts works with node-sass
       - node/install-packages
       - run:
           name: Install LFTP
@@ -33,7 +33,7 @@ workflows:
   build-workflow:
     jobs:
       - build:
-          filters:  # using regex filters requires the entire branch to match
+          filters: 
             branches:
-              only:  # only branches matching the below regex filters will run
+              only:  # build will only run on push/merge to main
                 - main
